# OSBootLoader

loader/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  entry.sy_  kldr.sys  loader.sy_
loader/include/: asminc.S  build.h  cmdline.h  debug.h  kldr.h  ktypes.h  machine.h  mem.h  miniui.h  pc.h  pcbios.h  pcconsole.h  pcio.h  pcmemory.h  pcutility.h  status.h  tui.h  ui.h
loader/include/arch/x86/common/: def.S
loader/include/crt/: _null.h  ctype.h  size_t.h  stdint.h  stdio.h  stdlib.h  string.h  va_arg.h  va_end.h  va_list.h  va_size.h  va_start.h
loader/lib/: build.c  cmdline.c  debug.c  machine.c  mem.c  miniui.c  pc.c  pcbios.c  pcconsole.c  pcio.c  pcmemory.c  pcutility.c  tui.c  ui.c
loader/lib/-ui/: uitext.c
loader/lib/crt/: stdio.c  stdlib.c  string.c
loader/loader_entry/arch/x86-32/: entry.S  entry_realmode_routines.S  link.ld
loader/loader_main/: link.ld  loader.c
preloader/arch/x86-32/mbr/: build.bat  link.ld  mbr.S
preloader/arch/x86-32/vbs/fat32/: build.bat  link.ld  vbs.S
